Описание изменений (например: добавлен модуль .sk)

--- a/autoresponder_config.json
+++ b/autoresponder_config.json
@@ -1,4 +1,4 @@
 {
     "enabled": true,
-    "response_text": "тест автоответчика. Если это сообщение в группе не баньте паже"
+    "response_text": "сейчас я не в сети.отвечу позже. Не ответил - лох"
 }
